# ScopeBasedLanguage

./: .gitignore  CMakeLists.txt  Expression.cpp  Expression.h  Function.cpp  Function.h  Paragraph.cpp  Paragraph.h  README.md  Scope.cpp  Scope.h  Sentence.cpp  Sentence.h  Token.cpp  Token.h  TokenStream.cpp  TokenStream.h  Types.cpp  Types.h
lib/: Automata.cpp  Automata.h  BinTree.cpp  BinTree.h  BinTreeNode.cpp  BinTreeNode.h  Regexp.cpp  Regexp.h
lib/test/: Graph.cpp  Graph.h
test/: BinTreeNodeTest.cpp  BinTreeTest.cpp  CMakeLists.txt  FunctionTest.cpp  TypeTest.cpp
